# graduate

./: .gitattributes  Adaptive_Quantile_Range_Guard实验说明.md  REPRODUCTION_GUIDE.md  师兄论文目录整理.md  星载可靠推理保护机制改进筛选规划.md  星载可靠推理项目与论文最终说明.md
code/SPINNV2/: .gitignore  README.md  requirements-dev.txt
code/SPINNV2/artifacts/audits/: resnet50_compat.json  resnet50_eurosat_gpu_prevalidation_compat.json  resnet50_eurosat_smoke_compat.json  yolov10n_coco_simplified_current_compat.json  yolov10n_compat.json  yolov10n_dior_1000_prevalidation_compat.json  yolov10n_dior_full_e30_b16_compat.json  yolov10n_dior_subset_smoke_compat.json  yolov10n_simplified_compat.json  yolov10n_simplified_compat_after_ops.json
code/SPINNV2/artifacts/plans/: resnet50_final_dmr.json  resnet50_gpu_prevalidation_highrisk_dmr.json  yolov10n_dior_1000_control_dmr_automatic.json  yolov10n_dior_full_e30_b16_control_dmr.json  yolov10n_dior_full_e30_b16_ilp_dmr_20pct_4mb.json  yolov10n_dior_full_e30_b16_ilp_dmr_20pct_4mb_runtime_calibrated.json
code/SPINNV2/artifacts/profiles/: yolov10n_dior_full_e30_b16_dmr_candidates.json  yolov10n_dior_full_e30_b16_dmr_cost_profile.json
code/SPINNV2/artifacts/reports/: resnet50_eurosat_gpu_prevalidation_memory.csv  resnet50_gpu_prevalidation_coarse_risk.json  resnet50_gpu_prevalidation_runtime_map.json  resnet50_gpu_prevalidation_runtime_validation.json  resnet50_gpu_prevalidation_screen_v2_risk.json  resnet50_memory_plan.csv  resnet50_pass_stats.json  resnet50_smoke_risk.json  yolov10n_memory_plan.csv  yolov10n_pass_stats.json
code/SPINNV2/benchmarks/: bench_simd_vs_ort.py  compare_kernels.py  compare_passes.py  conv_shape_summary.py  run_all.py  run_latency.py  run_m6_models.py  run_memory.py
code/SPINNV2/compiler/: __init__.py  cli.py
code/SPINNV2/compiler/codegen/: __init__.py  c_codegen.py
code/SPINNV2/compiler/frontend/: __init__.py  onnx_importer.py
code/SPINNV2/docs/: architecture.md  execution_plan.md
code/SPINNV2/format/: sir_spec.md  spk_format.md
code/SPINNV2/research/: __init__.py
code/SPINNV2/runtime/: CMakeLists.txt
code/SPINNV2/runtime/core/: context.h  executor.c  loader.c  version.c
code/SPINNV2/runtime/include/: spkv2_format.h  spkv2_kernel.h  spkv2_platform.h  spkv2_runtime.h
code/SPINNV2/runtime/kernels/optimized/: kernels_simd.c  simd_common.c  simd_common.h  simd_kernels.h  simd_sgemm.c  simd_sgemm.h
code/SPINNV2/runtime/kernels/optimized/activation/: activation.c
code/SPINNV2/runtime/kernels/optimized/conv/: conv.c
code/SPINNV2/runtime/kernels/optimized/math/: elementwise.c
code/SPINNV2/runtime/kernels/optimized/mm/: gemm.c  matmul.c
code/SPINNV2/runtime/kernels/optimized/reduce/: reduce.c
code/SPINNV2/runtime/kernels/optimized/shape/: transpose.c
code/SPINNV2/runtime/kernels/reference/: kernel_common.c  kernel_common.h  kernels.c  reference_kernels.h
code/SPINNV2/runtime/kernels/reference/activation/: relu.c  sigmoid.c  softmax.c
code/SPINNV2/runtime/kernels/reference/conv/: conv.c  conv_im2col.c
code/SPINNV2/runtime/kernels/reference/math/: add.c  binary.c
code/SPINNV2/runtime/kernels/reference/mm/: gemm.c  gemm_cpu_direct.c  matmul.c
code/SPINNV2/runtime/kernels/reference/pool/: maxpool.c
code/SPINNV2/runtime/kernels/reference/reduce/: reduce.c
code/SPINNV2/runtime/kernels/reference/shape/: copy.c  flatten.c  resize.c  tile.c  transpose.c  unsqueeze.c
code/SPINNV2/runtime/kernels/reference/tensor/: concat.c  gather.c  gather_elements.c  slice.c  split.c  topk.c
code/SPINNV2/runtime/platform/: platform.c
code/SPINNV2/runtime/tests/: test_prepare_arena.c  test_reliability.c  test_runtime_smoke.c
code/SPINNV2/runtime/tools/: spkv2_bench.c  spkv2_fault_run.c  spkv2_protection_bench.c  spkv2_run.c
code/SPINNV2/scripts/: check_reproducibility.py  export_paper_tables.py
code/SPINNV2/spinnv2/: __init__.py
(+279 files in other folders)
